# education

./: .gitignore  App.py  App_ocr.py  README.md  ai_tools.py  audio_process_and_replay.py  audio_utils.py  demo_audio_resample.py  demo_paddle.py  logger.py  ocr_model.py  orchestrator.py  progress_store.py  pyproject.toml  speaker_model.py  speech2text_model.py  translate_model.py  tt.py  workflow_runner.py
config/workflows/: fun_for_starters_audio.json  history_science_english.json  split_transcribe_example.json  weekly_listening.json
models/: taskmeta.py  workflow.py
scripts/: generate_config.py  merge_config.py  run_tasks.py
services/: base.py  defaults.py  registry.py
tests/: test_generate_config.py  test_progress_store.py
